# playground

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  benchmark_cgemm.cu  benchmark_segment_merger.cu  bpdn_cuda.cu  bpdn_cuda.h  find_runs.cu  linear_solve_dx.cu  linear_solve_dx.h  segment_merger.cu  segment_merger.h  sweep_example.txt  test_bpdn.cu  test_linear_solve_dx.cu  test_segment_merger.cu
python/: gpu_latency_predictor.py
